--- a/03-affinity.yaml
+++ b/03-affinity.yaml
@@ -3,6 +3,16 @@ kind: Pod
 metadata:
   name: nginx
 spec: 
+  affinity:
+    nodeAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+      - weight: 1
+        preference:
+          matchExpressions:
+          - key: another-node-label-key
+            operator: In
+            values:
+            - another-node-label-value  
   containers:
   # docker run -d --name nginx nginx
   - name: nginx
